# TCPChatAplication

./: CMakeLists.txt  README.md  stdin2ethernet.c
include/: s2e_ess.c  s2e_ess.h
libs/: netconf.c  netconf.h
src/: mainApp.c  ncgui.c  stdin2ethernet.c
test/: client  clienttest.c
